tests/snapshots/highlighting__highlight_match@001.snap
---
source: tests/highlighting.rs
description: "input: items [\"apple\", \"banana\", \"grape\"]\noptions: --color=matched:9,current_match:1\nafter:\n  @type \"pp\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> apple                                                                         "
"  1/3                                                                        0/0"
"> pp                                                                            "
cursor: (24, 5)
