tests/snapshots/highlighting__highlight_match@color002.snap
---
source: tests/highlighting.rs
description: "input: items [\"apple\", \"banana\", \"grape\"]\noptions: --color=matched:9,current_match:1"
---
(21, 0..1) ">" fg=Indexed(161)
(21, 1..2) " " fg=Indexed(168)
(21, 2..3) "a" bg=Indexed(236)
(21, 3..5) "pp" fg=Indexed(1) bg=Indexed(236)
(21, 5..7) "le" bg=Indexed(236)
(22, 0..5) "  1/3" fg=Indexed(144)
(22, 77..80) "0/0" fg=Indexed(144)
(23, 0..2) "> " fg=Indexed(110)
