tests/snapshots/highlighting__highlight_split_match@001.snap
---
source: tests/highlighting.rs
description: "input: items [\"apple\", \"banana\", \"grape\"]\noptions: --color=matched:9,current_match:1,current_bg:236\nafter:\n  @type \"aaa\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> banana                                                                        "
"  1/3                                                                        0/0"
"> aaa                                                                           "
cursor: (24, 6)
