tests/snapshots/highlighting__highlight_split_match@color002.snap
---
source: tests/highlighting.rs
description: "input: items [\"apple\", \"banana\", \"grape\"]\noptions: --color=matched:9,current_match:1,current_bg:236"
---
(21, 0..1) ">" fg=Indexed(161)
(21, 1..2) " " fg=Indexed(168)
(21, 2..3) "b" bg=Indexed(236)
(21, 3..4) "a" fg=Indexed(1) bg=Indexed(236)
(21, 4..5) "n" bg=Indexed(236)
(21, 5..6) "a" fg=Indexed(1) bg=Indexed(236)
(21, 6..7) "n" bg=Indexed(236)
(21, 7..8) "a" fg=Indexed(1) bg=Indexed(236)
(22, 0..5) "  1/3" fg=Indexed(144)
(22, 77..80) "0/0" fg=Indexed(144)
(23, 0..2) "> " fg=Indexed(110)
